--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "react-tsparticles": "^2.8.0",
+    "tailwind-scrollbar": "^2.1.0",
     "tsparticles": "^2.8.0",
     "tsparticles-engine": "^2.8.0",
     "typescript": "4.9.5"
