--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-social-icons": "^5.15.0",
     "react-tsparticles": "^2.8.0",
     "tailwind-scrollbar": "^2.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tsparticles": "^2.8.0",
     "tsparticles-engine": "^2.8.0",
     "typescript": "4.9.5"
